<resources>
    <string name="app_name">EbooksStore</string>
    <string name="action_settings">Settings</string>
    <string name="buton_add_book">Add book</string>
    <string name="buton_remove_book">Remove book</string>
    <string name="buton_list_book">List book</string>
    <string name="buton_update_pret">Update price</string>
    <string name="buton_update_rating">Update rating</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="title_activity_list_books">ListBooks</string>
    <string name="title_activity_remove_books">RemoveBooksActivity</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_update_rating">UpdateRatingActivity</string>
    <string name="category_hint"><font size="10">Technical, Novel or Art album</font></string>
    <string name="title_hint"><font size="10">Enter book title</font></string>
    <string name="no_pages_hint"><font size="10">Enter no. of pages</font></string>
    <string name="price_hint"><font size="10">Enter price</font></string>
    <string name="rating_hint"><font size="10">Current rating</font></string>
    <string name="author_surname_hint"><font size="10">Enter author surname</font></string>
    <string name="author_name_hint"><font size="10">Enter author name</font></string>
</resources>
