<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kosst.ebooksstore.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:background="@color/pishwaisser">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/buton_add_book"
            android:id="@+id/buton_add_book"
            android:layout_marginTop="@dimen/margin_buttons"
            android:layout_marginBottom="@dimen/margin_buttons"
            android:background="@drawable/buttondrawable"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/buton_remove_book"
            android:id="@+id/buton_remove_book"
            android:layout_marginTop="@dimen/margin_buttons"
            android:layout_marginBottom="@dimen/margin_buttons"
            android:background="@drawable/buttondrawable"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/buton_list_book"
            android:id="@+id/buton_list_books"
            android:layout_marginTop="@dimen/margin_buttons"
            android:layout_marginBottom="@dimen/margin_buttons"
            android:background="@drawable/buttondrawable"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/buton_update_pret"
            android:id="@+id/update_price"
            android:layout_marginTop="@dimen/margin_buttons"
            android:layout_marginBottom="@dimen/margin_buttons"
            android:background="@drawable/buttondrawable"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/buton_update_rating"
            android:id="@+id/update_rating"
            android:layout_marginTop="@dimen/margin_buttons"
            android:layout_marginBottom="@dimen/margin_buttons"
            android:background="@drawable/buttondrawable"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Test DB"
            android:id="@+id/test_DB"
            android:layout_marginTop="@dimen/margin_buttons"
            android:layout_marginBottom="@dimen/margin_buttons"
            android:background="@drawable/buttondrawable"
            />



    </LinearLayout>
</RelativeLayout>
