<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kosst.ebooksstore.AddBookActivity"
    tools:showIn="@layout/activity_add_book">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@color/pishwaisser"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Categorie"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:id="@+id/categorie"
                android:background="@color/cacaniu"
                android:hint="@string/category_hint"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="ISBN"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="isbn generated code"
                android:id="@+id/ISBN"
                android:layout_weight="2"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Titlu"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:id="@+id/Titlu"
                android:background="@color/cacaniu"
                android:hint="@string/title_hint"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Numar pagini"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:id="@+id/Numar_pagini"
                android:background="@color/cacaniu"
                android:hint="@string/no_pages_hint"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Pret"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:id="@+id/Pret"
                android:background="@color/cacaniu"
                android:hint="@string/price_hint"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Rating"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:id="@+id/Rating"
                android:background="@color/cacaniu"
                android:hint="@string/rating_hint"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Autor"
                android:layout_weight="2"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:id="@+id/nume_autor"
                android:background="@color/cacaniu"
                android:hint="@string/author_surname_hint"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:id="@+id/prenume_autor"
                android:background="@color/cacaniu"
                android:hint="@string/author_name_hint"
                />


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Inca un autor"
            android:id="@+id/add_author"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Adauga carte"
        android:id="@+id/save_book"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
